--- a/BelleVie-master/book.css
+++ b/BelleVie-master/book.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300);
+/* @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300);
 html {
   height: 100px;
 }
@@ -40,14 +40,14 @@ body :-ms-input-placeholder {
   font-family: 'Source Sans Pro', sans-serif;
   color: white;
   font-weight: 300;
-}
+} */
 
 .wrapper {
-  background: #50a3a2;
-  background: -webkit-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
-  background: -moz-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
-  background: -o-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
-  background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
+  background: rgba(243, 18, 75, 0.5);
+  background: -webkit-linear-gradient(top left, rgba(243, 18, 75, 0.5) 0%, rgba(255, 44, 90, 0.5) 100%);
+  background: -moz-linear-gradient(top left, rgba(243, 18, 75, 0.5) 0%, rgba(255, 44, 90, 0.5) 100%);
+  background: -o-linear-gradient(top left, rgba(243, 18, 75, 0.5) 0%, rgba(255, 44, 90, 0.5) 100%);
+  background: linear-gradient(to bottom right, rgba(243, 18, 75, 0.5) 0%, rgba(255, 44, 90, 0.5) 100%);
   /* position: absolute; */
   /* top: 50%; */
   left: 0;
@@ -95,7 +95,7 @@ form input {
   margin: 0 auto 10px auto;
   text-align: center;
   font-size: 18px;
-  color: white;
+  color: white !important;
   transition-duration: 0.25s;
   font-weight: 300;
 }
@@ -107,7 +107,7 @@ form input:hover {
 form input:focus {
   background-color: white;
   width: 300px;
-  color: #53e3a6;
+  color: rgba(255, 44, 90, 0.5);
 }
 
 form button {
@@ -116,7 +116,7 @@ form button {
   background-color: white;
   border: 0;
   padding: 10px 15px;
-  color: #53e3a6;
+  color: rgba(255, 44, 90, 0.5);
   border-radius: 3px;
   width: 250px;
   cursor: pointer;
