--- a/BelleVie-master/book.css
+++ b/BelleVie-master/book.css
@@ -95,13 +95,13 @@ form input {
   margin: 0 auto 10px auto;
   text-align: center;
   font-size: 18px;
-  color: white !important;
+  color:white ;
   transition-duration: 0.25s;
   font-weight: 300;
 }
 
 form input:hover {
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color:rgba(255, 44, 90, 0.5);
 }
 
 form input:focus {
